[gd_scene load_steps=4 format=3 uid="uid://uisw7olibfma"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_daqcd"]
[ext_resource type="SpriteFrames" uid="uid://dwoghc0dwpgxu" path="res://assets/Soldiers/assault_frames.tres" id="2_jnabn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_72m1b"]
radius = 3.16228

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_daqcd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_jnabn")
animation = &"walking"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_72m1b")

[node name="DamagedTimer" type="Timer" parent="."]

[node name="GunOrigin" type="Marker2D" parent="."]
position = Vector2(0, 1.5)

[connection signal="timeout" from="DamagedTimer" to="." method="_on_damaged_timer_timeout"]
